2004/05/21 16:08 (+0200) kaffeetisch

	* xs/GnomeIconTheme.xs (data_to_hv): Check if display_name is NULL
	before using it.

	* xs/GnomeIconLookup.xs
	* xs/GnomeIconTheme.xs
	* xs/GnomePasswordDialog.xs
	* xs/GnomeThumbnail.xs: Mark 'file' unused in case there are no
	xsubs at all.

2004/05/16 17:45 (+0200) kaffeetisch

	* t/GnomeDruid.t: Add reference to the relevant bug to the
	set_contents_background comment.

	* t/GnomeThumbnail.t: Test has_uri and is_valid but skip them for
	now since they're broken.

2004/04/27 20:45 (+0200) kaffeetisch

	* Makefile.PL: Add Gnome2::Canvas to PREREQ_PM as well so that it
	(hopefully) gets picked up by CPAN(PLUS).pm.

2004/03/29 19:55 (+0200) kaffeetisch

	* Gnome2.pm
	* Makefile.PL
	* NEWS
	* README: Version 1.00.

	* t/GnomeConfig.t
	* t/GnomeEntry.t
	* t/GnomeIconEntry.t
	* t/GnomePasswordDialog.t
	* xs/Gnome2.xs
	* xs/GnomeHelp.xs
	* xs/GnomeIconEntry.xs
	* xs/GnomePasswordDialog.xs
	* xs/GnomeURL.xs: Refer to stable releases only.

2004/03/11 16:17 (+0100) kaffeetisch

	* Gnome2.pm
	* Makefile.PL
	* NEWS
	* README: Version 0.94.

	* Gnome2.pm: Provide an import() implementation that relays
	everything to UNIVERSAL::VERSION to make version checking work.

	* xs/GnomeHelp.xs
	* xs/GnomeURL.xs: Use the new __gerror__ keyword to mark those
	functions that may croak on error.

2004/03/02 05:06 (+0100) kaffeetisch

	* Gnome2.pm: Document the recent API changes.

	A NEWS
	* Gnome2.pm
	* MANIFEST
	* README: Version 0.93.

2004/03/02 04:34 (+0100) kaffeetisch

	* xs/GnomeApp.xs
	* xs/GnomeAppHelper.xs
	* xs/GnomeClient.xs
	* xs/GnomeConfig.xs
	* xs/GnomeDruid.xs
	* xs/GnomeInit.xs
	* xs/GnomeModuleInfo.xs
	* xs/GnomeUIDefs.xs: Rearrange ALIAS sections to avoid unneeded
	xsubs.

2004/03/02 03:35 (+0100) kaffeetisch

	* t/GnomeConfig.t
	* t/GnomeEntry.t
	* t/GnomeIconEntry.t
	* t/GnomeIconTheme.t
	* t/GnomePasswordDialog.t
	* t/GnomeThumbnail.t
	* xs/Gnome2.xs: Stick to the new version information policy: