@@ -1,3 +1,11 @@
+2004/05/28 23:58 (+0200) kaffeetisch
+
+	* Gnome2.pm: Actually use() Gnome2::Canvas so users of Gnome2 are
+	not required to do so themselves.
+
+	* t/GnomeIconTheme.t: Use the gnome-fs-directory icon.  Check if
+	the icon data is a hash reference.
+
 2004/05/21 16:08 (+0200) kaffeetisch
 
 	* xs/GnomeIconTheme.xs (data_to_hv): Check if display_name is NULL
